<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageAverse"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="5dp"
            android:src="@android:drawable/ic_menu_camera"
            android:scaleType="centerInside"
            android:background="#55FFFFFF"/>

        <ImageView
            android:id="@+id/imageReverse"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="5dp"
            android:src="@android:drawable/ic_menu_camera"
            android:scaleType="centerInside"
            android:background="#55FFFFFF"/>

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coin_name"
        android:inputType="textCapWords"
        android:singleLine="true"/>

    <AutoCompleteTextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/country"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/years"
        android:inputType="number"
        android:singleLine="true"
        android:editable="false"
        android:focusableInTouchMode="false"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:gravity="top|left"
        android:inputType="textCapSentences|textMultiLine"
        android:minLines="5"/>

</LinearLayout>