<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <lt.tomzmt.coinalbum.ui.widgets.FlippingImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_image_height"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_name"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coin_name"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_years"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/years"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_country"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_composition"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/composition"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_composition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_diameter"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diameter"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_diameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_mass"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mass"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_edge"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edge"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_edge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_mint"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mint"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_mint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_mintage"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mintage"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_mintage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            style="@style/CoinDetailsItemEntry"
            android:id="@+id/container_description"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/CoinDetailsItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

            <TextView
                style="@style/CoinDetailsItemValue"
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>